Site HTML com Bootstrap

--- a/primeiro.html
+++ b/primeiro.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div>
-                <img class="imagem" src="miguel-noite1.jpg" alt="Foto 3x4 de Miguel Mota">
+                <img class="imagem" src="miguel-noite.jpg" alt="Foto 3x4 de Miguel Mota" width="150">
             </div>
             <h1 id="title">Miguel Mota</h1>
         </header>
@@ -20,7 +20,7 @@
                 <header>
                     <h3 class="post_title">Post #1</h3>
                     <div>
-                        <img class="imagem" src="formatura-vscode.jpg" alt="Foto do Miguel na formatura">
+                        <img class="imagem" src="miguel-formatura.jpg" alt="Foto do Miguel na formatura" width="250">
                     </div>
                 </header>
                 <p class="corpo">
